--- a/PlanSummaryThought/201604.md
+++ b/PlanSummaryThought/201604.md
@@ -15,8 +15,11 @@ yangliang@20160417
 
 * 系统重构: 继续。5月全部应该就能ok。需要深入的是，框架的熟悉，drools的深入
 * dubbo框架的深入: 希望能在4月份读懂框架，5月能够详细的写一下源码分析
-* 京华烟云: 相比木兰，个人更喜欢莫愁。小说似乎把人都写的比较完美
 * 学习下java的并发方面的东西
+* 关注下finagle: 后续和dubbo做下对比
+
+* 京华烟云: 相比木兰，个人更喜欢莫愁。小说似乎把人都写的比较完美
+
 
 希望
 
