--- a/PlanSummaryThought/201605.md
+++ b/PlanSummaryThought/201605.md
@@ -40,3 +40,30 @@ yangliang @ 20160529
 * 每周至少3次的健身
 * 古北水镇一游: 北方难得的江南味
 
+  
+  
+## Some Pic
+
+
+古北水镇
+
+<img src="picture/IMG_20160528_090814.jpg" width="60%" height="60%">
+
+有点江南的味
+
+<img src="picture//IMG_20160528_094613.jpg" width="60%" height="60%">
+
+夏景也不错
+
+<img src="picture//IMG_20160528_102154.jpg" width="60%" height="60%">
+
+梅花桩
+
+<img src="picture//mmexport1464491017246.jpg" width="60%" height="60%">
+
+Team
+
+<img src="picture/mmexport1464417969383.jpg" width="60%" height="60%">
+
+
+
