update dubbo source code analysis; 面试题目整理

--- a/0_Basic/一些面试题目.md
+++ b/0_Basic/一些面试题目.md
@@ -1,78 +1,73 @@
 yangliang @ 20160607
 
-马旭同学整理的一些面试题目，我做个分类，顺便尝试各个击破.
+`马旭`同学整理的一些面试题目(偏Java)，我做个分类，顺便尝试各个击破.
 
-待分类，待击破
+待击破
 
-
-Java基本语法
+# Java基础
 
 ```
 1.java反射 
 2.线程池有哪些，用过哪些？关键的参数有哪些，拒绝策略是什么
-
+3.HashMap，ArrayList的实现细节，如果扩容。HashMap的数据结构，如何处理hash冲突
+4.类加载器的委托机制
+28.Java序列化和反序列化
+29.多线程
+24.多线程，阻塞，concurrent包，future设计模式
+25.单例模式，两种方式：主动，懒模式，懒模式不用同步怎么搞（用静态内部类）
+26.内部类，静态内部类（在第一次使用的时候才加载的特性，被使用的很多）
+12.ArrayList LinkedAraayList
+13.NIO
+19.多线程一般怎么写
+20.spring MVC 怎么处理请求
+21.servlet生命周期
+22.多线程，大量的线程僵死导致无法运行，线程池怎么处理（比如数据库连接池怎么处理），怎么扩容
 ```
 
-Java高级
-
+# JVM
 ```
 3.JVM调优。JVM内存模型，年轻代，年老代，永久代
 4.JVM内存回收策略
 ```
 
-数据结构和算法
+# 数据结构和算法
 
 ```
-fd
-```
-
-数据库
-
-
-```
-```
-
-网络通信
-
-```
-```
-
-```
-5.HashMap，ArrayList的实现细节，如果扩容。HashMap的数据结构，如何处理hash冲突
-6.关系型数据库如何存储数据
-7.类加载器的委托机制
-8.DDOS攻击如何防范
-9.高可用系统，分流，降级，系统监控，扩容啥的，都是根据实际的项目 问的
+15.TreeMap的数据结构——红黑树
 10.字符处理，比如有一个字符串 hello work yun he 怎么把它变成 he yun work hello，尽量少使用string的方法
 11.字符处理，有两个字符串A B，有以下三条条件：1）如果A中的字符在B里边都存在；2）如果B里边的字符在A里边都存在；3）大小写不敏感。判断A和B是相等的。
-12.TCP的三次握手，UDP的特点
+30.链表的反转
+23.图的遍历，树的遍历
 
-12.ArrayList LinkedAraayList
-13.NIO 
-14.TCP 和 UDP的差别，qq能不能用UDP（可以  ）
-15.TreeMap的数据结构——红黑树
+```
+
+# 数据库
+```
+6.关系型数据库如何存储数据
+27.MYSql的Qps，系统的分流，限流
 16.数据库索引的数据结构——B+树
 17.MySQL执行计划
-18.Linux 
-查看硬盘：df
-内存： free
- cpu: cat /proc/cpuinfo
-19.多线程一般怎么写
-20.spring MVC 怎么处理请求
-21.servlet生命周期
-22.多线程，大量的线程僵死导致无法运行，线程池怎么处理（比如数据库连接池怎么处理），怎么扩容
-23.图的遍历，树的遍历
-24.多线程，阻塞，concurrent包，future设计模式
-25.单例模式，两种方式：主动，懒模式，懒模式不用同步怎么搞（用静态内部类）
-26.内部类，静态内部类（在第一次使用的时候才加载的特性，被使用的很多）
-27.MYSql的Qps，系统的分流，限流
-28.java 的序列化和反序列化
-29.多线程
-30.链表的反转
-31.自我介绍(如何介绍支付系统)
-32.怎么解决拆单问题
+32.怎么解决拆单问题(分库分表？)
+```
+
+# 网络通信
+
+```
+12.TCP的三次握手，UDP的特点
+14.TCP 和 UDP的差别，qq能不能用UDP（可以)
+```
+
+# 架构框架
+```
+9.高可用系统，分流，降级，系统监控，扩容，都是根据实际的项目 问的
 33.dubbo的原理，原理图，分层图，rpc框架
 34.thrift protbuffer
-35.JVM虚拟机
+```
+
+# 其他
+```
+8.DDOS攻击如何防范
+18.Linux 查看硬盘：df 内存： free cpu: cat /proc/cpuinfo
+31.自我介绍(如何介绍支付系统)
 36.负载均衡的策略
 ```
