--- a/PlanSummaryThought/20180421.md
+++ b/PlanSummaryThought/20180421.md
@@ -1,4 +1,6 @@
-[TOC]
+ TODO： 加入自己的 review 和思考
+
+
 
 最近脑子里总在想几个词，`复盘`，`沉淀`，`总结`，`思考`。正好看到美团技术博客上的一篇[文章](https://tech.meituan.com/study_vs_work.html)，感觉很对口。摘要同时写写读后感，权当小结。
 
