--- a/PlanSummaryThought/20180421.md
+++ b/PlanSummaryThought/20180421.md
@@ -4,7 +4,7 @@
 
 最近脑子里总在想几个词，`复盘`，`沉淀`，`总结`，`思考`。正好看到美团技术博客上的一篇[文章](https://tech.meituan.com/study_vs_work.html)，感觉很对口。摘要同时写写读后感，权当小结。
 
-文章标题《工作中如何做好技术积累》，分为3分方面阐述
+文章标题《工作中如何做好技术积累》，分为3方面阐述
 
 * 关于学习的一些方法论
 * 一些常见疑惑：良好心态的重要性
