--- a/PlanSummaryThought/20181202.md
+++ b/PlanSummaryThought/20181202.md
@@ -1,10 +1,19 @@
 ```
-20181202 23:02
-新安嘉苑
+create 20181202 23:02 @ 新安嘉苑
+update 20181216 10:40 @ 新安嘉苑 
 ```
 
 
 
 2018倒计时了。总结规划在哪里。
 
-TODO
+
+
+工作：过去；现状；规划
+
+生活：房子；婚姻；父母；思考
+
+
+
+
+
